--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ circle {
   /* Style the top navigation bar */
   .navbar {
     display: flex;
+    justify-content: flex-end;
     background-color: #333;
   }
   
@@ -39,6 +40,9 @@ circle {
     background-color: #ddd;
     color: black;
   }
+  .navbar button {
+      padding: 14px 20px;
+  }
   
   /* Column container */
   .row {  
@@ -52,6 +56,7 @@ circle {
     flex: 30%;
     background-color: #f1f1f1;
     padding: 20px;
+    display: none;
   }
   
   /* Main column */
