--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,19 @@
-circle {
-    fill: steelblue;
-    stroke: black;
+.annotation {
+  stroke: darkorange;
+  stroke-width: 2;
+}
+text.annotation {
+  stroke: black;
+  font-family: sans-serif;
+  font-size: 12;
+  stroke-width: 1;
+}
+rect {
+  fill: dodgerblue
+}
+rect.selected {
+  stroke: darkorange;
+  stroke-width: 3;
 }
 * {
     box-sizing: border-box;
