--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,25 @@ text.annotation {
   stroke-width: 1;
 }
 rect {
-  fill: dodgerblue
+  fill: steelblue;
+  stroke: steelblue;
+  stroke-width: 2;
 }
 rect.selected {
   stroke: darkorange;
   stroke-width: 3;
 }
+rect.hover {
+  fill: darkorange;
+  stroke: darkorange;
+}
+.charttitle {
+  fill: steelblue;
+  font-style: italic;
+  font-family: sans-serif;
+  font-size: 60;
+}
+
 * {
     box-sizing: border-box;
   }
@@ -66,7 +79,7 @@ rect.selected {
   /* Create two unequal columns that sits next to each other */
   /* Sidebar/left column */
   .side {
-    flex: 30%;
+    flex: 20%;
     background-color: #f1f1f1;
     padding: 20px;
     display: none;
@@ -74,7 +87,7 @@ rect.selected {
   
   /* Main column */
   .main {
-    flex: 70%;
+    flex: 80%;
     background-color: white;
     padding: 20px;
   }
