Added year slider.

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ rect.hover {
   .header {
     padding: 20px;
     text-align: center;
-    background: #b9872ade;
+    background: steelblue;
     color: white;
   }
   
